# Machine-learning-Basics

./: README.md  pyproject.toml
app/: Loading_models.ipynb  basics.py  load_models.ipynb
app/First_model/: Claude.py  First_model.py  Practice_code.ipynb
